[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-indicator-backend"
version = "0.1.0"
description = "CPU-efficient novel indicator discovery backend"
authors = [{ name = "Codex" }]
requires-python = ">=3.10,<3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "numpy>=1.26.0",
  "polars>=1.14.0",
  "duckdb>=1.1.3",
  "psutil>=6.1.0",
  "requests>=2.32.0",
  "jinja2>=3.1.4",
  "xhtml2pdf>=0.2.16",
  "python-dateutil>=2.9.0",
  "orjson>=3.10.11"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.3"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
